--- a/exercises/exercises_1/comments.html
+++ b/exercises/exercises_1/comments.html
@@ -26,6 +26,43 @@
     <script type="text/babel">
       const { useState, useEffect } = React;
 
+      const BackToTop = () => {
+        const [isVisible, setIsVisible] = useState(false);
+
+        useEffect(() => {
+          const toggleVisibility = () => {
+            if (window.scrollY > 100) {
+              setIsVisible(true);
+            } else {
+              setIsVisible(false);
+            }
+          };
+          window.addEventListener("scroll", toggleVisibility);
+
+          return () => window.removeEventListener("scroll", toggleVisibility);
+        }, []);
+
+        const scrollToTop = () => window.scrollTo({ top: 0 });
+
+        return (
+          <span
+            onClick={scrollToTop}
+            className={`back-to-top${isVisible ? " show" : ""}`}>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              strokeWidth="2"
+              strokeLinecap="round"
+              strokeLinejoin="round">
+              <path d="M12 19V5m-7 7 7-7 7 7" />
+            </svg>
+          </span>
+        );
+      };
+
       function Comments() {
         const [data, setData] = useState([]);
         const [loading, setLoading] = useState(true);
@@ -222,6 +259,7 @@
                 )}
               </div>
             </div>
+            <BackToTop />
           </div>
         );
       }
