--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="color-scheme" content="dark" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thực hành ReactJS cùng F8</title>
   </head>
