--- a/public/exercises/exercises_1/comments.html
+++ b/public/exercises/exercises_1/comments.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/ReactJS-Practice-F88/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bài tập 5: Comment System</title>
+    <title>Homework 5: Comment System</title>
     <!-- React & ReactDOM từ CDN -->
     <script
       src="https://unpkg.com/react@18/umd/react.development.js"
@@ -23,6 +26,43 @@
     <script type="text/babel">
       const { useState, useEffect } = React;
 
+      const BackToTop = () => {
+        const [isVisible, setIsVisible] = useState(false);
+
+        useEffect(() => {
+          const toggleVisibility = () => {
+            if (window.scrollY > 100) {
+              setIsVisible(true);
+            } else {
+              setIsVisible(false);
+            }
+          };
+          window.addEventListener("scroll", toggleVisibility);
+
+          return () => window.removeEventListener("scroll", toggleVisibility);
+        }, []);
+
+        const scrollToTop = () => window.scrollTo({ top: 0 });
+
+        return (
+          <span
+            onClick={scrollToTop}
+            className={`back-to-top${isVisible ? " show" : ""}`}>
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              strokeWidth="2"
+              strokeLinecap="round"
+              strokeLinejoin="round">
+              <path d="M12 19V5m-7 7 7-7 7 7" />
+            </svg>
+          </span>
+        );
+      };
+
       function Comments() {
         const [data, setData] = useState([]);
         const [loading, setLoading] = useState(true);
@@ -35,20 +75,24 @@
 
         const Header = () => {
           const ToggleTheme = () => {
-            const [theme, setTheme] = useState(() => {
-              return localStorage.getItem("theme");
-            });
+            const [theme, setTheme] = useState("");
             useEffect(() => {
-              document.documentElement.classList.toggle(
-                "dark",
-                theme === "dark",
-              );
-              localStorage.setItem("theme", theme);
+              let localTheme = localStorage.getItem("theme");
+              setTheme(!localTheme ? "dark" : localTheme);
+            }, []);
+
+            useEffect(() => {
+              document.documentElement.className = theme;
             }, [theme]);
 
             const toggle = () => {
-              setTheme(theme === "dark" ? "" : "dark");
+              setTheme(theme === "dark" ? "light" : "dark");
+              localStorage.setItem(
+                "theme",
+                theme === "dark" ? "light" : "dark",
+              );
             };
+
             return (
               <button className="toggle-theme" onClick={toggle}>
                 {theme === "dark" ? "🌙" : "☀️"}
@@ -215,9 +259,11 @@
                 )}
               </div>
             </div>
+            <BackToTop />
           </div>
         );
       }
+
       const root = ReactDOM.createRoot(document.getElementById("root"));
       root.render(<Comments />);
     </script>
