--- a/exercises/exercises_1/todo.html
+++ b/exercises/exercises_1/todo.html
@@ -53,7 +53,7 @@
           <header id="header">
             <div className="header">
               <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-              <a className="gotoback" href="/ReactJS-Practice-F88/index.html">
+              <a className="gotoback" href="/">
                 Home
               </a>
               <ToggleTheme />
