--- a/exercises/exercises_1/weather.html
+++ b/exercises/exercises_1/weather.html
@@ -34,6 +34,15 @@
       };
 
       const Header = () => {
+        const [path, setPath] = useState("/");
+
+        useEffect(() => {
+          const isProduct =
+            window.location.hostname !== "localhost" &&
+            window.location.hostname !== "127.0.0.1";
+          setPath(isProduct ? "/ReactJS-Practice-F88" : "/");
+        }, []);
+
         const ToggleTheme = () => {
           const [theme, setTheme] = useState(() => {
             const localTheme = localStorage.getItem("theme");
@@ -61,7 +70,7 @@
           <header id="header">
             <div className="header">
               <h1 className="slogan">Conquer ReactJS with F8 🚀 </h1>
-              <a className="gotoback" href="./">
+              <a className="gotoback" href={path}>
                 Home
               </a>
               <ToggleTheme />
