--- a/exercises/exercises_1/weather.html
+++ b/exercises/exercises_1/weather.html
@@ -40,7 +40,7 @@
           const isProduct =
             window.location.hostname !== "localhost" &&
             window.location.hostname !== "127.0.0.1";
-          setPath(isProduct ? "/ReactJS-Practice-F88/index.html" : "/");
+          setPath(isProduct ? "/ReactJS-Practice-F88/" : "/");
         }, []);
 
         const ToggleTheme = () => {
